# text-embeddings-minilm

./: .gitignore  README.md  pyproject.toml  test_model.py  test_package.py
text_embeddings_minilm/: __init__.py  embedder.py
