[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-embeddings-minilm"
version = "0.1.0"
description = "Convert text into embeddings using all-MiniLM-L6-v2"
authors = [{ name = "Your Name" }]
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=2.2.2"
]
